templates: fix news card badge spacing
Closes #3232.

--- a/cernopendata/modules/theme/static/scss/frontpage.scss
+++ b/cernopendata/modules/theme/static/scss/frontpage.scss
@@ -444,6 +444,7 @@ $break-md: 768px;
     border: 1px solid $dark_blue;
     border-radius: 2px;
     margin-bottom: 25px;
+    width: 100%;
 
     h4 {
       a {
